test link to v in slide

--- a/lessons/01lesson/index.html
+++ b/lessons/01lesson/index.html
@@ -146,19 +146,19 @@
             height: 2.2em;
           "
         >
-          <img
-            class="fragment"
-            src="../../images/logo.svg"
-            width="400"
-            height="400"
-            alt="python logo"
-            style="
-              height: 180px;
-              margin: 0 auto 4rem auto;
-              background: transparent;
-            "
-            class="demo-logo"
-          />
+        <a href="https://veroskills.com/"><img
+          class="fragment"
+          src="../../images/logo.svg"
+          width="400"
+          height="400"
+          alt="python logo"
+          style="
+          height: 180px;
+          margin: 0 auto 4rem auto;
+          background: transparent;
+          "
+          class="demo-logo"
+          /></a>
         </div>
       </div>
     </div>
