update readme and index.html

--- a/lessons/01lesson/index.html
+++ b/lessons/01lesson/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>veroSkills – Intro to Python</title>
+    <title>VeroSkills | Intro to Python</title>
 
     <meta name="description" content="Introduction to Python with VeroSkills" />
     <meta name="author" content="Tyler Maxwell" />
