update readme and index

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 <li><p>Provide a brief introduction to the course, the Python programming language and practice with the VeroSkills interface.</p></li>
 <li><p>Python Origins</p>
 <ul>
-<li><a href="%22https://gvanrossum.github.io%22">Guido van Rossum</a></li>
+<li><a href="https://gvanrossum.github.io">Guido van Rossum</a></li>
 <li>Monty Python</li>
 </ul></li>
 <li><p>Why Python?</p>
@@ -246,7 +246,7 @@
 <li><code>help(&lt;python keyword&gt;)</code> to access documents</li>
 </ul>
 <ol start="2" type="1">
-<li><p><a href="./lessons/02lesson/index.html">data types</a></p></li>
+<li><h2 id="data-types"><a href="./lessons/02lesson/index.html">data types</a></h2></li>
 <li><p><a href="./lessons/03lesson/index.html">programming logic</a></p></li>
 <li><p><a href="./lessons/04lesson/index.html">variables and strings</a></p></li>
 <li><p><a href="./lessons/05lesson/index.html">flow control</a></p></li>
